test/arrays/deitz/part7/test_illegal_named_alias_argument.chpl
proc foo(A: [1..3] int) {
  writeln(A);
}

var B: [2..4] int;

foo(A=>B);
